--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@ theme: jekyll-theme-minimal
 
 title: Equinix Metal Community
 
+description: The [Equinix Metal Community](http://eqix-metal-community.slack.com/) is a space for bare metal developers, collaborators, and friends to chat and support one another in an inclusive, playful, and so very metal space.
+
 permalink: none
