--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 
 title: Equinix Metal Community
-logo: /assets/images/equinix-metal_slack_community.png
+logo: /assets/images/Equinix%20Metal%20Standard%20RGB.png
 permalink: none
